# llm-tools-yt-transcript

./: README.md  example-report.html  llm_tools_yt_transcript.py  pyproject.toml  yt-digest-prompt-template.txt
tests/: test_llm_tools_yt_transcript.py
