[project]
name = "llm-tools-yt-transcript"
version = "0.1"
description = "Make YouTube transcripts available to llm"
readme = "README.md"
authors = [{name = "Rupert Lloyd"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.9"
dependencies = [
    "llm>=0.26",
    "requests>=2.32.4",
    "youtube-transcript-api>=1.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/rupello/llm-tools-yt-transcript"
Changelog = "https://github.com/rupello/llm-tools-yt-transcript/releases"
Issues = "https://github.com/rupello/llm-tools-yt-transcript/issues"
CI = "https://github.com/rupello/llm-tools-yt-transcript/actions"

[project.entry-points.llm]
llm_tools_yt_transcript = "llm_tools_yt_transcript"

[project.optional-dependencies]
test = ["pytest", "llm-echo>=0.3a1"]
